--- a/paberater/src/pages/home/Home.css
+++ b/paberater/src/pages/home/Home.css
@@ -30,6 +30,8 @@ svg{
 
 .container-img{
   display: flex;
+  justify-content: center;
+  margin-left: -18vh;
   position: relative;
   margin-top: -15vh;
 }
